sample/error/e01806.asn
E01806 DEFINITIONS ::=
BEGIN
    INT ::= INTEGER {abc(1), abc(2)}    -- E01806
END
